testdata/good/before/comp-no-args/index.tw
<ul>@component("components/user")@end</ul>
<ol>@component("~user")@end</ol>